# Tensor

./: .gitignore  Cargo.toml  README  README.md  config.json.example
client/: index.html
clients/basic_html/: index.html
clients/tensor-client/: .eslintrc.js  README.md  bun.lockb  components.json  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
clients/tensor-client/src/: App.svelte  Layout.svelte  app.css
clients/tensor-client/src/contexts/: activeServer.ts  serverLists.ts
clients/tensor-client/src/lib/_components/: Chat.svelte  Header.svelte  ServerList.svelte
clients/tensor-client/src/lib/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-item.svelte  context-menu-radio-item.svelte  context-menu-sub-content.svelte  context-menu-sub-trigger.svelte
clients/tensor-client/src/lib/components/ui/input/: input.svelte
clients/tensor-client/src/lib/components/ui/popover/: popover-content.svelte
clients/tensor-client/src/lib/components/ui/textarea/: textarea.svelte
clients/tensor-client/src/types/: clientValidator.ts  message.ts
protocol/: message.h
server/: Cargo.toml  config.json.example
server/src/: channel.rs  client.rs  http.rs  main.rs  message.rs  server.rs  websocket.rs
src/: client.rs  http.rs  main.rs  server.rs  websocket.rs
