[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures-channel = "0.3.30"
futures-util = "0.3.30"
tokio = {version = "1.36.0", features=["full"]}
tokio-tungstenite = {version = "0.21.0", features = ["handshake"]}
